tests/compile_fail/should_panic_name_value.rs
#[skuld::test]
#[should_panic = "msg"]
fn should_panic_name_value() {
    panic!("msg");
}

fn main() {}
