tests/compile_fail/should_panic_name_value.stderr
error: expected #[should_panic] or #[should_panic(expected = "message")]
 --> tests/compile_fail/should_panic_name_value.rs:2:1
  |
2 | #[should_panic = "msg"]
  | ^^^^^^^^^^^^^^^^^^^^^^^
